--- a/nginx-log-monitoring/docker-compose.yml
+++ b/nginx-log-monitoring/docker-compose.yml
@@ -1,70 +1,74 @@
-version: '3'
-services:
-  es01:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
-    container_name: es01
-    environment:
-      - node.name=es01
-      - discovery.seed_hosts=es02
-      - cluster.initial_master_nodes=es01,es02
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+version: '3.2'
+
+services: 
+  elasticsearch:
+    build:
+      context: elasticsearch/
+      args:
+        ELK_VERSION: $ELK_VERSION
     volumes:
-      - esdata01:/usr/share/elasticsearch/data
+      - type: bind
+        source: ./elasticsearch/config/elasticsearch.yml
+        target: /usr/share/elasticsearch/config/elasticsearch.yml
+        read_only: true
+      - type: volume
+        source: elasticsearch
+        target: /usr/share/elasticsearch/data
     ports:
-      - 9200:9200
-    networks:
-      - esnet
-  es02:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
-    container_name: es02
+      - "9200:9200"
+      - "9300:9300"
     environment:
-      - node.name=es02
-      - discovery.seed_hosts=es01
-      - cluster.initial_master_nodes=es01,es02
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - esdata02:/usr/share/elasticsearch/data
+      ES_JAVA_OPTS: "-Xmx256m -Xms256m"
+      ELASTIC_PASSWORD: changeme
+      discovery.type: single-node
     networks:
-      - esnet
+      - elk
+
+  logstash:
+    build:
+      context: logstash/
+      args:
+        ELK_VERSION: $ELK_VERSION
+    volumes:
+      - type: bind
+        source: ./logstash/config/logstash.yml
+        target: /usr/share/logstash/config/logstash.yml
+        read_only: true
+      - type: bind
+        source: ./logstash/pipeline
+        target: /usr/share/logstash/pipeline
+        read_only: true
+    # ports:
+    #   - "5000:5000/tcp"
+    #   - "5000:5000/udp"
+    #   - "9600:9600"
+    environment:
+      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
+    networks:
+      - elk
+    depends_on:
+      - elasticsearch
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.6.1
-    container_name: kibana
-    ports:
-      - 5601:5601
-    depends_on: 
-      - es01
-    environment:
-      ELASTICSEARCH_URL: http://es01:9200
-  
-  logstash:
-    image: docker.elastic.co/logstash/logstash-oss:7.6.1
-    container_name: logstash
-    ports:
-      - 5044:5044
+    build:
+      context: kibana/
+      args:
+        ELK_VERSION: $ELK_VERSION
     volumes:
-      - ./pipeline:/usr/share/logstash/pipeline
-      - ./log:/var/log
+      - type: bind
+        source: ./kibana/config/kibana.yml
+        target: /usr/share/kibana/config/kibana.yml
+        read_only: true
+    ports:
+      - "5601:5601"
+    networks:
+      - elk
     depends_on:
-      - es01
-
-volumes:
-  esdata01:
-    driver: local
-  esdata02:
-    driver: local
+      - elasticsearch
 
 networks:
-  esnet:
+  elk:
+    driver: bridge
+
+volumes:
+  elasticsearch:
